<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/welcomeOnboardingFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_shoeListingFragment"
            app:destination="@id/shoeListingFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/welcomeOnboardingFragment"
        android:name="com.udacity.shoestore.ui.welcomeonboarding.WelcomeOnboardingFragment"
        android:label="@string/welcome_onboarding"
        tools:layout="@layout/fragment_welcome_onboarding">
        <action
            android:id="@+id/action_welcomeOnboardingFragment_to_instructionsOnboardingFragment"
            app:destination="@id/instructionsOnboardingFragment"
            app:popUpTo="@id/welcomeOnboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/instructionsOnboardingFragment"
        android:name="com.udacity.shoestore.ui.instructionsonboarding.InstructionsOnboardingFragment"
        android:label="@string/instructions_onboarding"
        tools:layout="@layout/fragment_instructions_onboarding">
        <action
            android:id="@+id/action_instructionsOnboardingFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/instructionsOnboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/shoeListingFragment"
        android:name="com.udacity.shoestore.ui.shoelisting.ShoeListingFragment"
        android:label="@string/shoe_listing"
        tools:layout="@layout/fragment_shoe_listing">
        <action
            android:id="@+id/action_shoeListingFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment" />
        <argument
            android:name="ShowAppBar"
            android:defaultValue="true" />
        <action
            android:id="@+id/action_shoeListingFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/shoeListingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.ui.shoedetail.ShoeDetailFragment"
        android:label="@string/shoe_detail"
        tools:layout="@layout/fragment_shoe_detail">
        <argument
            android:name="ShowAppBar"
            android:defaultValue="true" />
    </fragment>

</navigation>